# knn-inference

./: .gitignore  README.md  bench-build-and-run.sh  build-and-run.sh  build.gradle  environment.yml  export_model.py  generator-build-and-run.sh  inference.py
model/: model-const.pb  model-const.pbtxt
src/main/cpp/: CMakeLists.txt  bench.cpp  common.h  generator.cpp  hello.cpp  hnswindex.h  knn.h  knn_api.h  knnservice.cpp  tf.h
src/main/java/com/criteo/knn/: Annoy4sBenchmark.java  AnnoyBenchmark.java  BenchmarkBase.java  Distance.java  HelloKnn.java  HelloTensorFlow.java  HnswBenchmarck.java  KnnLib.java  KnnLibConfig.java  KnnModel.java  KnnResult.java  KnnService.java  KnnServiceBenchmark.java  TfLinearTransformBenchmark.java  TfLineraTransforBenchmark.java
